@@ -75,6 +75,10 @@ public class SolrException extends RuntimeException {
 
   public void log(Logger log) { log(log,this); }
   public static void log(Logger log, Throwable e) {
+    if (e instanceof SolrException
+        && ((SolrException) e).code() == ErrorCode.SERVICE_UNAVAILABLE.code) {
+      return;
+    }
     String stackTrace = toStr(e);
     String ignore = doIgnore(e, stackTrace);
     if (ignore != null) {
@@ -86,6 +90,10 @@ public class SolrException extends RuntimeException {
   }
 
   public static void log(Logger log, String msg, Throwable e) {
+    if (e instanceof SolrException
+        && ((SolrException) e).code() == ErrorCode.SERVICE_UNAVAILABLE.code) {
+      log(log, msg);
+    }
     String stackTrace = msg + ':' + toStr(e);
     String ignore = doIgnore(e, stackTrace);
     if (ignore != null) {
@@ -109,7 +117,7 @@ public class SolrException extends RuntimeException {
   @Override
   public String toString() { return super.toString(); }
 
-  public static String toStr(Throwable e) {
+  public static String toStr(Throwable e) {   
     CharArrayWriter cw = new CharArrayWriter();
     PrintWriter pw = new PrintWriter(cw);
     e.printStackTrace(pw);
